--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
                 class="img-size"
                 src="./img/desktop-app.jpg"
                 alt="Десктопные приложения"
+                width="370px"
+                height="294px"
               />
               <p class="specialization-name">Десктопные приложения</p>
             </a>
@@ -137,7 +139,8 @@
               <img
                 src="./img/mobile-app.jpg"
                 alt="мобильные приложения"
-                class="img-size"
+                width="370px"
+                height="294px"
               />
               <p class="specialization-name">мобильные приложения</p>
             </a>
@@ -147,7 +150,8 @@
               <img
                 src="./img/design-solution.jpg"
                 alt="Дизайнерские решения"
-                class="img-size"
+                width="370px"
+                height="294px"
               />
               <p class="specialization-name">Дизайнерские решения</p>
             </a>
