--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
           <span class="main-link-color">Studio</span>
         </a>
         <ul class="site-nav">
-          <li class="item link-nav">
+          <li class="item">
             <a href="/index.html" class="link link-nav">Студия</a>
           </li>
-          <li class="item link-nav">
+          <li class="item">
             <a href="./portfolio.html" class="link link-nav">Портфолио</a>
           </li>
-          <li class="item link-nav">
-            <a href="/" class="link link-header">Контакты</a>
+          <li class="item">
+            <a href="/" class="link link-nav">Контакты</a>
           </li>
         </ul>
         <ul class="auth-nav">
