--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -24,11 +24,15 @@
           <span class="main-link-color">Studio</span>
         </a>
         <ul class="site-nav">
-          <li class="item"><a href="/index.html" class="link">Студия</a></li>
           <li class="item">
-            <a href="./portfolio.html" class="link">Портфолио</a>
+            <a href="/index.html" class="link link-nav">Студия</a>
           </li>
-          <li class="item"><a href="/" class="link">Контакты</a></li>
+          <li class="item">
+            <a href="./portfolio.html" class="link link-nav">Портфолио</a>
+          </li>
+          <li class="item">
+            <a href="/" class="link link-nav">Контакты</a>
+          </li>
         </ul>
         <ul class="auth-nav">
           <li class="item">
@@ -77,80 +81,177 @@
     <div class="container">
       <ul class="portfolio-main">
         <li class="each-block-portfolio">
-          <a href="/" class="link">
-            <img src="./portfolio-img/технокряк.jpg" alt="технокряк" />
-            <p class="caption-hover img-description">
-              Технокряк это современная площадка распространения коронавируса.
-              Компании используют эту платформу для цифрового шпионажа и атак на
-              защищённые сервера конкурентов.
-            </p>
-            <p class="caption">Технокряк</p>
-            <span class="portfolio-span">Веб-сайт</span>
+          <a href="/" class="link link-portfolio">
+            <div class="photo-card">
+              <img src="./portfolio-img/технокряк.jpg" alt="технокряк" />
+              <div class="card-overlay">
+                <p class="img-description">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </div>
+            <div class="card-contact">
+              <p class="project-title">Технокряк</p>
+              <span class="portfolio-span">Веб-сайт</span>
+            </div>
           </a>
         </li>
         <li class="each-block-portfolio">
-          <a href="/" class="link"
-            ><img
-              src="./portfolio-img/new-orlean-vs-golden-star.jpg"
-              alt="Постер New Orlean vs Golden Star"
-            />
-            <p class="caption">Постер New Orlean vs Golden Star</p>
-            <span class="portfolio-span">Дизайн</span>
+          <a href="/" class="link link-portfolio">
+            <div class="photo-card">
+              <img
+                src="./portfolio-img/new-orlean-vs-golden-star-zip.jpg"
+                alt="new-orlean-vs-golden-star"
+              />
+              <div class="card-overlay">
+                <p class="img-description">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </div>
+            <div class="card-contact">
+              <p class="project-title">Постер New Orlean vs Golden Star</p>
+              <span class="portfolio-span">Дизайн</span>
+            </div>
           </a>
         </li>
         <li class="each-block-portfolio">
-          <a href="/" class="link">
-            <img src="./portfolio-img/seafood.jpg" alt="Ресторан-Seafood" />
-            <p class="caption">Ресторан Seafood</p>
-            <span class="portfolio-span">приложение</span>
+          <a href="/" class="link link-portfolio">
+            <div class="photo-card">
+              <img src="./portfolio-img/seafood-zip.jpg" alt="Sea Food" />
+              <div class="card-overlay">
+                <p class="img-description">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </div>
+            <div class="card-contact">
+              <p class="project-title">Sea Food</p>
+              <span class="portfolio-span">Приложение</span>
+            </div>
           </a>
         </li>
         <li class="each-block-portfolio">
-          <a href="/" class="link">
-            <img src="./portfolio-img/prime.jpg" alt="Проект-Prime" />
-            <p class="caption">Проект Prime</p>
-            <span class="portfolio-span">Маркетинг</span>
+          <a href="/" class="link link-portfolio">
+            <div class="photo-card">
+              <img src="./portfolio-img/prime-zip.jpg" alt="Prime" />
+              <div class="card-overlay">
+                <p class="img-description">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </div>
+            <div class="card-contact">
+              <p class="project-title">Проект Prime</p>
+              <span class="portfolio-span">Маркетинг</span>
+            </div>
           </a>
         </li>
         <li class="each-block-portfolio">
-          <a href="/" class="link">
-            <img src="./portfolio-img/boxes.jpg" alt="Проект-Boxes" />
-            <p class="caption">Проект Boxes</p>
-            <span class="portfolio-span">Приложения</span>
+          <a href="/" class="link link-portfolio">
+            <div class="photo-card">
+              <img src="./portfolio-img/boxes-zip.jpg" alt="Boxes" />
+              <div class="card-overlay">
+                <p class="img-description">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </div>
+            <div class="card-contact">
+              <p class="project-title">Проект Boxes</p>
+              <span class="portfolio-span">Приложение</span>
+            </div>
           </a>
         </li>
         <li class="each-block-portfolio">
-          <a href="/" class="link">
-            <img
-              src="./portfolio-img/inspiration-has-no-border.jpg"
-              alt="Inspiration has no Borders"
-            />
-            <p class="caption">Inspiration has no Borders</p>
-            <span class="portfolio-span">Веб-сайт</span>
+          <a href="/" class="link link-portfolio">
+            <div class="photo-card">
+              <img
+                src="./portfolio-img/inspiration-has-no-border-zip.jpg"
+                alt="Inspiration Has No Border"
+              />
+              <div class="card-overlay">
+                <p class="img-description">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </div>
+            <div class="card-contact">
+              <p class="project-title">Inspiration Has No Border</p>
+              <span class="portfolio-span">Веб-сайт</span>
+            </div>
           </a>
         </li>
         <li class="each-block-portfolio">
-          <a href="/" class="link">
-            <img
-              src="./portfolio-img/limited-edition.jpg"
-              alt="Издание Limited Edition"
-            />
-            <p class="caption">Издание Limited Edition</p>
-            <span class="portfolio-span">Дизайн</span>
+          <a href="/" class="link link-portfolio">
+            <div class="photo-card">
+              <img
+                src="./portfolio-img/limited-edition-zip.jpg"
+                alt="Limited edition books picture"
+              />
+              <div class="card-overlay">
+                <p class="img-description">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </div>
+            <div class="card-contact">
+              <p class="project-title">Издание Limited Edition</p>
+              <span class="portfolio-span">Дизайн</span>
+            </div>
           </a>
         </li>
         <li class="each-block-portfolio">
-          <a href="/" class="link">
-            <img src="./portfolio-img/lab.jpg" alt="Проект LAB" />
-            <p class="caption">Проект LAB</p>
-            <span class="portfolio-span">Маркетинг</span>
+          <a href="/" class="link link-portfolio">
+            <div class="photo-card">
+              <img src="./portfolio-img/lab-zip.jpg" alt="Project LAB" />
+              <div class="card-overlay">
+                <p class="img-description">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </div>
+            <div class="card-contact">
+              <p class="project-title">Проект LAB</p>
+              <span class="portfolio-span">Маркетинг</span>
+            </div>
           </a>
         </li>
         <li class="each-block-portfolio">
-          <a href="/" class="link">
-            <img src="./portfolio-img/businnes.jpg" alt="Growing Business" />
-            <p class="caption">Growing Business</p>
-            <span class="portfolio-span">Приоложение</span>
+          <a href="/" class="link link-portfolio">
+            <div class="photo-card">
+              <img
+                src="./portfolio-img/businnes-zip.jpg"
+                alt="Growing Businnes"
+              />
+              <div class="card-overlay">
+                <p class="img-description">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </div>
+            <div class="card-contact">
+              <p class="project-title">Growing Businnes</p>
+              <span class="portfolio-span">Приложение</span>
+            </div>
           </a>
         </li>
       </ul>
@@ -177,28 +278,28 @@
           <p class="footer-text">Присоединяйтесь</p>
           <ul class="app-links footer-link">
             <li>
-              <a href="" class="link social-links">
+              <a href="" class="link social-links social-links-footer">
                 <svg width="20" height="16">
                   <use href="./icons/symbol-defs2.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="" class="link social-links">
+              <a href="" class="link social-links social-links-footer">
                 <svg width="20" height="16">
                   <use href="./icons/symbol-defs2.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="" class="link social-links">
+              <a href="" class="link social-links social-links-footer">
                 <svg width="20" height="16">
                   <use href="./icons/symbol-defs2.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a href="" class="link social-links">
+              <a href="" class="link social-links social-links-footer">
                 <svg width="20" height="16">
                   <use href="./icons/symbol-defs2.svg#icon-linkedin"></use>
                 </svg>
