--- a/index.html
+++ b/index.html
@@ -61,12 +61,14 @@
           эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <a href="/" class="btn-decoration order-button"> Заказать услугу</a>
+        <button class="btn-decoration order-button">
+          Заказать услугу
+        </button>
       </div>
     </section>
     <section class="section">
       <div class="container">
-        <h2 class="section-title first-section-name">Преимущества</h2>
+        <h2 class="section-title first-section-name" hidden>Преимущества</h2>
         <ul class="main-info">
           <li class="main-logo-description">
             <div class="logotip">
@@ -125,40 +127,34 @@
         <h3 class="section-title">Чем мы занимаемся</h3>
         <ul class="what-are-we-doing">
           <li class="li-what-are-we-doing">
-            <a href="/" class="link">
-              <img
-                class="img-do"
-                src="./img/desktop-app.jpg"
-                alt="Десктопные приложения"
-                width="370px"
-                height="294px"
-              />
-              <p class="specialization-name">Десктопные приложения</p>
-            </a>
+            <img
+              class="img-do"
+              src="./img/desktop-app.jpg"
+              alt="Десктопные приложения"
+              width="370"
+              height="294"
+            />
+            <p class="specialization-name">Десктопные приложения</p>
           </li>
           <li class="li-what-are-we-doing">
-            <a href="/" class="link">
-              <img
-                class="img-do"
-                src="./img/mobile-app.jpg"
-                alt="мобильные приложения"
-                width="370px"
-                height="294px"
-              />
-              <p class="specialization-name">мобильные приложения</p>
-            </a>
+            <img
+              class="img-do"
+              src="./img/mobile-app.jpg"
+              alt="мобильные приложения"
+              width="370"
+              height="294"
+            />
+            <p class="specialization-name">мобильные приложения</p>
           </li>
           <li class="li-what-are-we-doing">
-            <a href="/" class="link">
-              <img
-                class="img-do"
-                src="./img/design-solution.jpg"
-                alt="Дизайнерские решения"
-                width="370px"
-                height="294px"
-              />
-              <p class="specialization-name">Дизайнерские решения</p>
-            </a>
+            <img
+              class="img-do"
+              src="./img/design-solution.jpg"
+              alt="Дизайнерские решения"
+              width="370px"
+              height="294px"
+            />
+            <p class="specialization-name">Дизайнерские решения</p>
           </li>
         </ul>
       </div>
@@ -178,40 +174,42 @@
               width="270px"
               height="260px"
             />
-            <p class="team-name">Николай Кучеренко</p>
-            <span class="team-proffession">
-              Product Designer
-            </span>
-            <ul class="app-links">
-              <li>
-                <a href="" class="link social-links">
-                  <svg class="svg-icons" width="20" height="16">
-                    <use href="./icons/symbol-defs2.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="" class="link social-links">
-                  <svg width="20" height="16" class="svg-color">
-                    <use href="./icons/symbol-defs2.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="" class="link social-links">
-                  <svg width="20" height="16">
-                    <use href="./icons/symbol-defs2.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="" class="link social-links">
-                  <svg width="20" height="16">
-                    <use href="./icons/symbol-defs2.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+            <div class="team-card">
+              <p class="team-name">Николай Кучеренко</p>
+              <span class="team-proffession">
+                Product Designer
+              </span>
+              <ul class="app-links">
+                <li>
+                  <a href="" class="link social-links">
+                    <svg class="svg-icons" width="20" height="16">
+                      <use href="./icons/symbol-defs2.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="link social-links">
+                    <svg width="20" height="16" class="svg-color">
+                      <use href="./icons/symbol-defs2.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="link social-links">
+                    <svg width="20" height="16">
+                      <use href="./icons/symbol-defs2.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="link social-links">
+                    <svg width="20" height="16">
+                      <use href="./icons/symbol-defs2.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="team-info">
             <img
@@ -221,40 +219,42 @@
               width="270px"
               height="260px"
             />
-            <p class="team-name">Ольга Иванова</p>
-            <span class="team-proffession">
-              Frontend Developer
-            </span>
-            <ul class="app-links">
-              <li>
-                <a href="" class="link social-links">
-                  <svg width="20" height="16">
-                    <use href="./icons/symbol-defs2.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="" class="link social-links">
-                  <svg width="20" height="16">
-                    <use href="./icons/symbol-defs2.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="" class="link social-links">
-                  <svg width="20" height="16">
-                    <use href="./icons/symbol-defs2.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="" class="link social-links">
-                  <svg width="20" height="16">
-                    <use href="./icons/symbol-defs2.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+            <div class="team-card">
+              <p class="team-name">Ольга Иванова</p>
+              <span class="team-proffession">
+                Frontend Developer
+              </span>
+              <ul class="app-links">
+                <li>
+                  <a href="" class="link social-links">
+                    <svg width="20" height="16">
+                      <use href="./icons/symbol-defs2.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="link social-links">
+                    <svg width="20" height="16">
+                      <use href="./icons/symbol-defs2.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="link social-links">
+                    <svg width="20" height="16">
+                      <use href="./icons/symbol-defs2.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="link social-links">
+                    <svg width="20" height="16">
+                      <use href="./icons/symbol-defs2.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="team-info">
             <img
@@ -264,40 +264,42 @@
               width="270px"
               height="260px"
             />
-            <p class="team-name">Андрей Шевченко</p>
-            <span class="team-proffession">
-              Marketing
-            </span>
-            <ul class="app-links">
-              <li>
-                <a href="" class="link social-links">
-                  <svg width="20" height="16">
-                    <use href="./icons/symbol-defs2.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="" class="link social-links">
-                  <svg width="20" height="16">
-                    <use href="./icons/symbol-defs2.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="" class="link social-links">
-                  <svg width="20" height="16">
-                    <use href="./icons/symbol-defs2.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="" class="link social-links">
-                  <svg width="20" height="16">
-                    <use href="./icons/symbol-defs2.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+            <div class="team-card">
+              <p class="team-name">Андрей Шевченко</p>
+              <span class="team-proffession">
+                Marketing
+              </span>
+              <ul class="app-links">
+                <li>
+                  <a href="" class="link social-links">
+                    <svg width="20" height="16">
+                      <use href="./icons/symbol-defs2.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="link social-links">
+                    <svg width="20" height="16">
+                      <use href="./icons/symbol-defs2.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="link social-links">
+                    <svg width="20" height="16">
+                      <use href="./icons/symbol-defs2.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="link social-links">
+                    <svg width="20" height="16">
+                      <use href="./icons/symbol-defs2.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="team-info">
             <img
@@ -307,38 +309,40 @@
               width="270px"
               height="260px"
             />
-            <p class="team-name">Иван Николаев</p>
-            <span class="team-proffession">UI Designer</span>
-            <ul class="app-links">
-              <li>
-                <a href="" class="link social-links">
-                  <svg width="20" height="16">
-                    <use href="./icons/symbol-defs2.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="" class="link social-links">
-                  <svg width="20" height="16">
-                    <use href="./icons/symbol-defs2.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="" class="link social-links">
-                  <svg width="20" height="16">
-                    <use href="./icons/symbol-defs2.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="" class="link social-links">
-                  <svg width="20" height="16">
-                    <use href="./icons/symbol-defs2.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
+            <div class="team-card">
+              <p class="team-name">Иван Николаев</p>
+              <span class="team-proffession">UI Designer</span>
+              <ul class="app-links">
+                <li>
+                  <a href="" class="link social-links">
+                    <svg width="20" height="16">
+                      <use href="./icons/symbol-defs2.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="link social-links">
+                    <svg width="20" height="16">
+                      <use href="./icons/symbol-defs2.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="link social-links">
+                    <svg width="20" height="16">
+                      <use href="./icons/symbol-defs2.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="link social-links">
+                    <svg width="20" height="16">
+                      <use href="./icons/symbol-defs2.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
         </ul>
       </div>
