--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
     <!-- радиокнопки -->
     <section class="buttons">
       <div class="container">
-        <h1>Filters buttons</h1>
+        <h1 hidden>Filters buttons</h1>
         <ul class="radio-button">
           <li class="btn-space">
             <button type="button" class="radio link">Все</button>
